# kyla

./: .gitignore  .hgignore  CMakeLists.txt  LICENSE  README.rst  bitbucket-pipelines.yml
doc/: Makefile  make.bat  requirements.txt
doc/source/: build.rst  changelog.rst  comparison.rst  concepts.rst  conf.py  howto.rst  index.rst  installer-file-format.rst  licenses.rst  quickstart.rst  repository-definition.rst  repository-types.rst  todo.rst  tutorial.rst
samples/: gen-qt.py  gen-sdk.py  nim-installer.xml  sample.xml
samples/glfw/: build.bat  create.py  fetch.py  fetch.sh  repair.bat  validate.bat
samples/glfw-3.1/: create.py  fetch.py
samples/linux-3.18/: create.py  fetch.py
samples/validation/: test.bat  v-1.xml  v-2.xml
samples/validation/data-2/: 1.txt
scripts/: compare-folder.py  gen-benchmark-db.py  gen-installer.py  kyla.py
src/: CMakeLists.txt
src/Core/: CMakeLists.txt
src/Core/inc/: ArrayRef.h  Compression.h  Exception.h  FileIO.h  Hash.h  InstallPackage.h  InstallPackageWriter.h  Installer.h  Kyla.h  Log.h  Property.h  Repository.h  RepositoryBuilder.h  SourcePackage.h  SourcePackageReader.h  SourcePackageWriter.h  StringRef.h  Uuid.h
src/Core/inc/sql/: Database.h
src/Core/src/: Compression.cpp  FileIO.cpp  Hash.cpp  InstallPackageWriter.cpp  Installer.cpp  Kyla.cpp  Property.cpp  Repository.cpp  RepositoryBuilder.cpp  SourcePackage.cpp  SourcePackageReader.cpp  SourcePackageWriter.cpp  Uuid.cpp
src/Core/src/sql/: Database.cpp
src/base/: CMakeLists.txt
src/base/inc/: ArrayAdapter.h  ArrayRef.h  BaseRepository.h  Compression.h  DeployedRepository.h  Exception.h  FileIO.h  Hash.h  Log.h  LooseRepository.h  PackedRepository.h  PackedRepositoryBase.h  Repository.h  RepositoryBuilder.h  StringRef.h  Types.h  Uuid.h  WebRepository.h
src/base/inc/sql/: Database.h
src/base/src/: BaseRepository.cpp  Compression.cpp  DeployedRepository.cpp  Exception.cpp  FileIO.cpp  Hash.cpp  Log.cpp  LooseRepository.cpp  PackedRepository.cpp  PackedRepositoryBase.cpp  Repository.cpp  RepositoryBuilder.cpp  StringRef.cpp  Uuid.cpp  WebRepository.cpp
src/base/src/sql/: Database.cpp
src/base/test/: CMakeLists.txt  Hash_test.cpp  main.cpp
src/cli/: CMakeLists.txt
src/cli/src/: main.cpp
src/common/: CMakeLists.txt
src/common/inc/: FileIO.h  Hash.h  SourcePackage.h
src/common/src/: FileIO.cpp  Hash.cpp  SourcePackage.cpp
src/generator/: CMakeLists.txt
src/generator/src/: GeneratorMain.cpp
src/installer/: CMakeLists.txt
src/installer/src/: InstallerMain.cpp
src/kyla/: CMakeLists.txt
src/kyla/inc/: Kyla.h
src/kyla/src/: Kyla.cpp
src/sql/: build-db-structure.sql  deploy-db-structure.sql  install-db-indices.sql  install-db-structure.sql  queries  structure.sql  temp-db-structure.sql
src/ui/: CMakeLists.txt  info.json  splashscreen.qml
src/ui/inc/: OpenSourceRepositoryThread.h  SetupContext.h  SetupDialog.h  SetupLogic.h  SplashDialog.h  startdialog.h
src/ui/src/: OpenSourceRepositoryThread.cpp  SetupContext.cpp  SetupDialog.cpp  SetupLogic.cpp  SplashDialog.cpp  main.cpp  startdialog.cpp
src/ui/ui/: MainWindow.qml  SetupDialog.qml  SetupDialog.ui  SplashDialog.qml  SplashDialog.ui  res.qrc  setupDialog.qml  splashDialog.qml  startdialog.ui
src/util/: CMakeLists.txt
src/util/txttoheader/: CMakeLists.txt  txttoheader.cpp
src/validator/: CMakeLists.txt
src/validator/src/: ValidatorMain.cpp
src/xsd/: core.xsd
test/: testrunner.py
test/tests/: basic.json  basic_encrypted.json  basic_install.json  configure_remove_feature.json  configure_remove_fileset.json  configure_two_features.json  configure_two_filesets.json  corrupted_source.json  null_byte_file.json  subfeature.json  truncated_source.json  two_features.json  two_filesets.json  two_packages.json  two_subfolders.json  update.json  update_no_file_change.json  validate.json  validate_encrypted.json
test/tests/data/: base_feature_id_2.xml  basic.xml  basic_encrypted.xml  null_byte_file.xml  subfeature.xml  two_features.xml  two_filesets.xml  two_folders.xml  two_packages.xml  version_one.xml  version_two.xml
test/tests/data/basic_install/: 1.txt  2.txt  basic_install.xml
test/tests/data/shared/: 1.txt  2.txt  3.txt
xsd/: core.xsd
