CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(kyla VERSION 2.0.3)
SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
SET(CMAKE_CXX_STANDARD 11)
ENABLE_TESTING()

SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY 	${PROJECT_BINARY_DIR}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY 	${PROJECT_BINARY_DIR}/bin)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY 	${PROJECT_BINARY_DIR}/bin)

find_package(PythonInterp 3.5)

ADD_CUSTOM_TARGET (docs
    ${PYTHON_EXECUTABLE} -m venv env
    COMMAND env/scripts/activate.bat
    COMMAND pip -q install -r requirements.txt
    COMMAND make.bat html

    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/doc)

ADD_TEST(NAME SanityTests
	COMMAND	${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/test/testrunner.py
		$<TARGET_FILE:kcl>
    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/test)

ADD_SUBDIRECTORY(src)