PROJECT(KylaCLI)

SET(SOURCES
	src/main.cpp)

FIND_PACKAGE(Boost 1.55.0 REQUIRED QUIET COMPONENTS program_options filesystem system)

ADD_EXECUTABLE(kcl ${SOURCES} ${HEADERS})
TARGET_LINK_LIBRARIES(kcl
	kyla.Core pugixml
	${Boost_LIBRARIES})
TARGET_INCLUDE_DIRECTORIES(kcl
	PRIVATE ${Boost_INCLUDE_DIRS})
SET_PROPERTY(TARGET kcl PROPERTY CXX_STANDARD 11)
SET_PROPERTY(TARGET kcl PROPERTY CXX_STANDARD_REQUIRED ON)
