PROJECT(KylaCLI)

SET(SOURCES
	src/main.cpp)
	
ADD_EXECUTABLE(kcl ${SOURCES} ${HEADERS})
TARGET_LINK_LIBRARIES(kcl
	kyla kylabase kylabuild
	pugixml CLI11)
TARGET_INCLUDE_DIRECTORIES(kcl
	PRIVATE ${Boost_INCLUDE_DIRS})
SET_PROPERTY(TARGET kcl PROPERTY CXX_STANDARD 17)
SET_PROPERTY(TARGET kcl PROPERTY CXX_STANDARD_REQUIRED ON)
