PROJECT(nim_common)

SET(HEADERS
    inc/Hash.h
    inc/SourcePackage.h)

SET(SOURCES
    src/Hash.cpp
    src/SourcePackage.cpp)

FIND_PACKAGE(OpenSSL)
FIND_PACKAGE(ZLIB)
INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})
FIND_PACKAGE(Boost 1.55.0 REQUIRED COMPONENTS log filesystem system)

ADD_LIBRARY(nim.Common STATIC ${SOURCES} ${HEADERS})
TARGET_LINK_LIBRARIES(nim.Common ${OPENSSL_LIBRARIES} ZLIB::ZLIB)
TARGET_INCLUDE_DIRECTORIES(nim.Common PUBLIC inc ${Boost_INCLUDE_DIRS})
SET_PROPERTY(TARGET nim.Common PROPERTY CXX_STANDARD 11)
SET_PROPERTY(TARGET nim.Common PROPERTY CXX_STANDARD_REQUIRED ON)
