PROJECT(kyla_common)

SET(HEADERS
    inc/Hash.h
    inc/SourcePackage.h)

SET(SOURCES
    src/Hash.cpp
    src/SourcePackage.cpp)

FIND_PACKAGE(OpenSSL)
FIND_PACKAGE(ZLIB)
FIND_PACKAGE(Boost 1.55.0 REQUIRED QUIET COMPONENTS log filesystem system thread)

ADD_LIBRARY(kyla.Common STATIC ${SOURCES} ${HEADERS})
TARGET_LINK_LIBRARIES(kyla.Common ${OPENSSL_LIBRARIES} ${Boost_LIBRARIES} ZLIB::ZLIB)
TARGET_INCLUDE_DIRECTORIES(kyla.Common
    PUBLIC inc ${Boost_INCLUDE_DIRS}
    PRIVATE ${OPENSSL_INCLUDE_DIR})
SET_PROPERTY(TARGET kyla.Common PROPERTY CXX_STANDARD 11)
SET_PROPERTY(TARGET kyla.Common PROPERTY CXX_STANDARD_REQUIRED ON)
