PROJECT(nim_installer)

SET(SOURCES
    src/InstallerMain.cpp)

FIND_PACKAGE(OpenSSL)
FIND_PACKAGE(ZLIB)

# Needed for log
ADD_DEFINITIONS(-DBOOST_LOG_DYN_LINK)
FIND_PACKAGE(Boost 1.55.0 REQUIRED QUIET COMPONENTS program_options filesystem system log)

ADD_EXECUTABLE(nim.Installer ${SOURCES})
TARGET_LINK_LIBRARIES(nim.Installer
    nim.Common sqlite ${OPENSSL_LIBRARIES} ${Boost_LIBRARIES} ZLIB::ZLIB)
TARGET_INCLUDE_DIRECTORIES(nim.Installer
    PRIVATE ${Boost_INCLUDE_DIRS} ${OPENSSL_INCLUDE_DIR})
SET_PROPERTY(TARGET nim.Installer PROPERTY CXX_STANDARD 11)
SET_PROPERTY(TARGET nim.Installer PROPERTY CXX_STANDARD_REQUIRED ON)
