PROJECT(kyla_installer)

SET(SOURCES
    src/InstallerMain.cpp)

FIND_PACKAGE(OpenSSL)
FIND_PACKAGE(ZLIB)

FIND_PACKAGE(Boost 1.55.0 REQUIRED QUIET COMPONENTS program_options filesystem system)

ADD_EXECUTABLE(kyla.Installer ${SOURCES})
TARGET_LINK_LIBRARIES(kyla.Installer
	kyla.Core sqlite ${OPENSSL_LIBRARIES} ${Boost_LIBRARIES} ZLIB::ZLIB)
TARGET_INCLUDE_DIRECTORIES(kyla.Installer
    PRIVATE ${Boost_INCLUDE_DIRS} ${OPENSSL_INCLUDE_DIR})
SET_PROPERTY(TARGET kyla.Installer PROPERTY CXX_STANDARD 11)
SET_PROPERTY(TARGET kyla.Installer PROPERTY CXX_STANDARD_REQUIRED ON)
