PROJECT(libkyla)

SET(HEADERS
	inc/Kyla.h)

SET(SOURCES
	src/Kyla.cpp)

IF(WIN32)
	ADD_DEFINITIONS(-DKYLA_PLATFORM_WINDOWS=1)
ELSE()
	ADD_DEFINITIONS(-DKYLA_PLATFORM_LINUX=1)
ENDIF()

FIND_PACKAGE(OpenSSL)
FIND_PACKAGE(Boost 1.59.0 REQUIRED QUIET COMPONENTS filesystem system)

ADD_LIBRARY(kyla SHARED ${SOURCES} ${HEADERS})
TARGET_LINK_LIBRARIES(kyla
	kylabase)
TARGET_INCLUDE_DIRECTORIES(kyla
	PUBLIC inc
	PRIVATE ${OPENSSL_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
TARGET_COMPILE_DEFINITIONS(kyla
	PRIVATE -DKYLA_BUILD_LIBRARY)
SET_PROPERTY(TARGET kyla PROPERTY CXX_STANDARD 11)
SET_PROPERTY(TARGET kyla PROPERTY CXX_STANDARD_REQUIRED ON)
