PROJECT(libkyla)

SET(HEADERS
	inc/Kyla.h)

SET(SOURCES
	src/Kyla.cpp)

ADD_LIBRARY(kyla SHARED ${SOURCES} ${HEADERS})
TARGET_LINK_LIBRARIES(kyla
	kylabase)
TARGET_INCLUDE_DIRECTORIES(kyla
	PUBLIC inc
	PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
TARGET_COMPILE_DEFINITIONS(kyla
	PRIVATE KYLA_BUILD_LIBRARY)
SET_PROPERTY(TARGET kyla PROPERTY CXX_STANDARD 17)
SET_PROPERTY(TARGET kyla PROPERTY CXX_STANDARD_REQUIRED ON)
