PROJECT(nim_validator)

SET(SOURCES
    src/ValidatorMain.cpp)

FIND_PACKAGE(OpenSSL)
INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})

FIND_PACKAGE(Boost 1.55.0 REQUIRED QUIET COMPONENTS program_options filesystem system log thread)

ADD_EXECUTABLE(nim.Validator ${SOURCES})
TARGET_LINK_LIBRARIES(nim.Validator nim.Common sqlite ${OPENSSL_LIBRARIES} ${Boost_LIBRARIES})
TARGET_INCLUDE_DIRECTORIES(nim.Validator
    PRIVATE ${Boost_INCLUDE_DIRS})
SET_PROPERTY(TARGET nim.Validator PROPERTY CXX_STANDARD 11)
SET_PROPERTY(TARGET nim.Validator PROPERTY CXX_STANDARD_REQUIRED ON)
