PROJECT(kyla_validator)

SET(SOURCES
    src/ValidatorMain.cpp)

FIND_PACKAGE(OpenSSL)
INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})

FIND_PACKAGE(Boost 1.55.0 REQUIRED QUIET COMPONENTS program_options filesystem system log thread)

ADD_EXECUTABLE(kyla.Validator ${SOURCES})
TARGET_LINK_LIBRARIES(kyla.Validator kyla.Common sqlite ${OPENSSL_LIBRARIES} ${Boost_LIBRARIES})
TARGET_INCLUDE_DIRECTORIES(kyla.Validator
    PRIVATE ${Boost_INCLUDE_DIRS})
SET_PROPERTY(TARGET kyla.Validator PROPERTY CXX_STANDARD 11)
SET_PROPERTY(TARGET kyla.Validator PROPERTY CXX_STANDARD_REQUIRED ON)
