PROJECT(kylabase_test)

SET(SOURCES
    Hash_test.cpp
	main.cpp)

IF(WIN32)
	ADD_DEFINITIONS(-DKYLA_PLATFORM_WINDOWS=1)
ELSE()
	ADD_DEFINITIONS(-DKYLA_PLATFORM_LINUX=1)
ENDIF()

ADD_EXECUTABLE(kylabase_test ${SOURCES})
TARGET_LINK_LIBRARIES(kylabase_test
	kylabase catch)

SET_PROPERTY(TARGET kylabase_test PROPERTY CXX_STANDARD 11)
SET_PROPERTY(TARGET kylabase_test PROPERTY CXX_STANDARD_REQUIRED ON)
